--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "AlienFarm",
   "version": "1.0.3",
   "scripts": {
     "dev": "LEVEL=silly PORT=3333 nodemon dst/server.js"
